# sudoku-solver

./: pyproject.toml
sudoku/: constants.py  grid.py  rules.py  solver.py
test/: test_grid.py
tests/: test_grid.py  test_rules.py  test_solver.py
